# Privacy-Leakage-in-Federated-Learning-in-Radiology-Reports

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: grid.yaml  ner.yaml
results/: ner2_discharge_s0.json  ner2_discharge_s1.json  ner2_discharge_s2.json  ner2_discharge_s3.json  ner2_discharge_s4.json  ner2_mimic_cxr_s0.json  ner2_mimic_cxr_s1.json  ner2_mimic_cxr_s2.json  ner2_mimic_cxr_s3.json  ner2_mimic_cxr_s4.json  ner2_radiology_s0.json  ner2_radiology_s1.json  ner2_radiology_s2.json  ner2_radiology_s3.json  ner2_radiology_s4.json
results/per_run/: per_run_gpt2.csv  per_run_llama2.csv  per_run_mimic_gpt2.csv  per_run_mimic_llama2.csv  per_run_mimic_radbert.csv  per_run_radbert.csv
scripts/: make_fig2.py  make_fig34.py  make_figures.py  make_supp_violins.py  run_grid.py  run_ner.py
src/flprivacy/: __init__.py  config.py
src/flprivacy/attack/: inversion.py
src/flprivacy/metrics/: text_metrics.py
src/flprivacy/ner/: entity_recall.py
src/flprivacy/pipeline/: __init__.py  grid.py
