[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flprivacy"
version = "1.0.0"
description = "Reproducible gradient-inversion privacy-leakage evaluation for federated radiology NLP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Santhosh Parampottupadam" }]
dependencies = ["torch>=2.0", "transformers>=4.40", "nltk>=3.8", "numpy>=1.24", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]
